<resources>

    <!-- Multi-use strings -->
    <string name="app_name">Burst Android</string>
    <string name="burst">Burst</string>
    <string name="back_caps">BACK</string>
    <string name="profile_caps">PROFILE</string>
    <string name="password_str">Password</string>
    <string name="calendar_str">Calendar</string>

    <!-- Drawer String -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- onboarding_school strings -->
    <string name="program_label">Program</string>
    <string name="school_desc_str">Customize your feed to get events happening on your campus</string>
    <string name="default_school_search">Not Your School?</string>
    <string name="card_image_school_str">Queen\'s University</string>

    <!-- Strings for layout activity_school_an.xml -->
    <string name="login">Login</string>
    <string name="login_info">with your Burst account or Facebook</string>
    <string name="email_phone">Email or phone</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="login_caps">LOGIN</string>

    <!-- Strings for layout activity_landing.xml -->
    <string name="find_passion">Find Your Passion</string>
    <string name="keep_touch">Keep in touch with the latest events and everything happening on campus</string>
    <string name="get_started_caps">GET STARTED</string>
    <string name="events_around_you">Events Around You</string>
    <string name="import_class_calendar_caps">IMPORT CLASS CALENDAR</string>
    <string name="google_calendar_caps">CONNECT TO GOOGLE CALENDAR</string>
    <string name="skip_button_text"><![CDATA[SKIP >]]></string>
    <string name="calendar_subtitle_text">Burst can manage your events and figure out when you are free to go</string>
    <string name="calendar_title_text">Connect to Your Calendar</string>
    <string name="name_str">Name</string>
    <string name="email_str">Email</string>
    <string name="location_str">Location</string>
    <string name="profile_pic_header">What can I call you?</string>>
    <string name="notif_description">This way you will get our event reminders so you won\'t miss the good moments</string>
    <string name="skip_str"><![CDATA[Skip >]]></string>
    <string name="enable_str">ENABLE</string>
    <string name="what_are_you_interested_in">What are you interested in?</string>
    <string name="interests">INTERESTS</string>
    <string name="search_topics">Search topics</string>
    <string name="to_be_replaced">To be replaced</string>
    <string name="background_logo">Background logo</string>
    <string name="calendar_str_arrow">CALENDAR ></string>
    <string name="set_profile_picture">Set profile picture</string>
    <string name="this_week_str">This Week</string>
    <string name="today_str">Today</string>
    <string name="happening_str">What\'s Happening</string>
    <string name="home_card_label"/>
    <string name="home_card_desc"/>
    <string name="home_card_date"/>
    <string name="home_card_time"/>
    <string name="home_card_location"/>
    <string name="card_class_label"/>
    <string name="card_class_description"/>
    <string name="card_class_time"/>

    <!-- Strings for explore fragment -->
    <string name="discovery">Discovery</string>
    <string name="events_clubs_people">Events, clubs, people</string>

    <!-- Placeholder strings for explore fragment -->
    <string name="place_holder_image">Place holder image</string>
    <string name="queens_civil_eng_club">Queen\'s Civil Eng Club</string>
    <string name="ellis_hall_324">Ellis Hall 324</string>
    <string name="placeholder_date">February 2, 2019\n4:30PM - 6:30PM</string>
    <string name="japanese_architecture_studies">Japanese Architecture Studies</string>
    <string name="placeholder_desc">Selection of old, beautiful, wooden structures, elevated slightly off the ground,
        with tiled or thatched roofs…</string>
    <string name="queens_university">Queen\'s University</string>
    <string name="hosting_an_event">Hosting an event?</string>
    <string name="list_yours_caps">LIST YOURS</string>
    <string name="all_events_caps">ALL EVENTS</string>
    <string name="engineering">Engineering</string>
    <string name="politics">Politics</string>
    <string name="by_faculty">By Faculty</string>
    <string name="by_interests">By Interests</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="notifications">Notifications</string>
    <string name="campus_map">Campus Map</string>
    <string name="catalog">Catalog</string>
    <string name="resources">Resources</string>
    <string name="profile">Profile</string>

    <!-- New Event Strings -->
    <string name="simple_date_format_str">MMM, dd, yyyy</string>
    <string name="time_format_str">hh:mm a</string>
    <string name="enter_time_hint">Enter Time</string>
    <string name="enter_date_hint">Enter Date</string>
    <string name="repeats_str">Repeats</string>
    <string name="alert_str">Alert</string>
    <string name="save_str">SAVE</string>
    <string name="all_day_st">All Day</string>
    <string name="starts_str">Starts</string>
    <string name="ends_str">Ends</string>
    <string name="new_event_str">New event</string>
    <string name="event_name_str">Event Name</string>
    <string name="new_event_time"/>
    <string name="event_str">EVENT</string>
    <string name="import_str">IMPORT</string>
    <string name="card_logo">Card Logo</string>

    <!-- Resources Fragment -->
    <string name="clubs_conferences_committees">Clubs, Conferences, Committees</string>
    <string name="qweb">QWEB</string>
    <string name="queen_s_web_development_club">Queen\'s Web Development Club</string>
    <string name="lorem_ipsum">Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiumsmod tempor
        incididunt ut!
    </string>

    <!-- Campus Map Fragment -->
    <string name="stauffer_library">Stauffer Library</string>
    <string name="study_place">Study Place</string>
    <string name="open">Open</string>
    <string name="closes_at_12am">Closes at 12AM</string>

    <!-- Event Page Strings -->
    <string name="event_title_label">Implementation of\nJavaScript</string>
    <string name="event_time_label">January 31, 2018 1PM-3PM</string>
    <string name="event_location_label">Ellis Hall 324</string>
    <string name="event_register_label">REGISTER</string>
    <string name="event_body_str">Lean from Would is a comfortable and minimalist lounge chair, characterized by an angular backrest.\n\nPlus, the simple and elegant design makes a good addition to any modern space and decor.</string>
    <string name="details_str">Details</string>
    <string name="details_text">Lean from Would is a comfortable and minimalist lounge chair, characterized by an angular backrest.\n\nPlus, the simple and elegant design makes a good addition to any modern space and decor.</string>
    <string name="event_gallery_label">Gallery</string>
    <string name="event_similar_label">Similar Events</string>
    <string name="links_label">Links</string>
    <string name="host_str">Host</string>

    <!-- similar_event_card.xml strings -->
    <string name="executives_str">Executives</string>
    <string name="schedule_str">Schedule</string>
    <string name="event_title_str">Event Title</string>
    <string name="author_str">Author</string>

    <!-- profile-user strings -->
    <string name="profile_name">User Name</string>
    <string name="study_school_str">School Info</string>
    <string name="follow_str_caps">FOLLOW</string>
    <string name="interests_str">Interests</string>
    <string name="view_all">View All</string>
    <string name="events">Events</string>

    <!-- profile-organization strings -->
    <string name="profile_org_name_str">Club Name</string>
    <string name="profile_org_desc_str">Club Description</string>
    <string name="profile_org_body_str">Body text of information on the club goes here.</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="attending_event_string">Attending</string>
    <string name="register_event_string">Register</string>

</resources>
