<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="20dp">

    <ImageView
            android:contentDescription="@string/background_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/background_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:clickable="false"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/enable_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="120dp"
            style="@style/RedButton_WhiteText"
            android:text="@string/enable_str"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/notif_subtitle"
              style="@style/OnboardingSubText"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toTopOf="@id/enable_button"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:text="@string/notif_description"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              style="@style/OnboardingTitleText"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintBottom_toTopOf="@id/notif_subtitle"
              android:text="@string/notifications"
              android:layout_marginBottom="4dp"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/location_button_notifications"
            style="@style/TextButton_GreyText"
            android:text="@string/calendar_str"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/skip_button_notifications"
            style="@style/TextButton_RedText"
            android:text="@string/skip_str"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>