<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:padding="20dp">
    <ImageView
            android:contentDescription="@string/background_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/background_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:clickable="false"/>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/calendar_title_text"
                style="@style/TitleText"
                android:layout_gravity="center_horizontal"
                android:text="@string/calendar_title_text"/>

        <TextView
                android:id="@+id/calendar_subtitle_text"
                style="@style/SubTitleText"
                android:text="@string/calendar_subtitle_text"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/import_class_calendar_button"
                style="@style/RedButton_WhiteText"
                android:text="@string/import_class_calendar_caps"
                android:layout_gravity="center_horizontal"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/connect_to_google_calendar"
                style="@style/WhiteButton_RedText"
                android:text="@string/google_calendar_caps"/>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/calendar_back"
            style="@style/TextButton_GreyText"
            android:text="@string/profile_caps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/calendar_skip"
            style="@style/TextButton_RedText"
            android:text="@string/skip_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>