<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp">

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/profileOrg_close_button"
               android:src="@drawable/ic_close_24px"/>

    <ImageView android:layout_width="100dp" android:layout_height="100dp"
               android:id="@+id/profileOrg_picture"
               android:src="@drawable/icon_profile_filled"
               android:layout_gravity="center"
               android:layout_marginTop="16dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/profile_org_name_str"
              android:layout_gravity="center"
              android:layout_marginTop="16dp"
              style="@style/TitleText"
    />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/profile_org_desc_str"
              android:layout_gravity="center"
              style="@style/SubTitleText"
    />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/profile_org_body_str"
              android:layout_marginTop="10dp"
    />

    <com.google.android.material.button.MaterialButton
            android:layout_width="164dp"
            android:layout_height="50dp"
            android:id="@+id/follow_button"
            style="@style/RedButton_WhiteText"
            android:text="@string/follow_str_caps"
            android:layout_gravity="center"
            android:layout_margin="8dp"
    />


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              style="@style/SubTitleText"
              android:layout_gravity="start"
              android:text="@string/events"
              android:layout_marginTop="8dp"
    />
    <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="6dp"
            android:id="@+id/profile_vert_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>