<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="350dp"
        android:layout_height="180dp"
        android:id="@+id/item_card"
        app:cardMaxElevation="1dp"
        app:cardElevation="1dp"
        android:layout_marginEnd="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <androidx.appcompat.widget.AppCompatImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/card_temp_backing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:tint="@color/black_50"
        />


        <ImageView
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/card_logo"
                android:alpha="0.2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_notification"
                android:contentDescription="@string/card_logo"/>

        <TextView
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_label"
                style="@style/HomeCard_Label"
                android:text="@string/home_card_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/card_description"
                  style="@style/HomeCard_Other"
                  app:layout_constraintStart_toEndOf="@id/card_logo"
                  app:layout_constraintTop_toTopOf="@id/card_logo"
                  android:text="@string/home_card_desc"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/card_time"
                  style="@style/HomeCard_Other"
                  android:text="@string/home_card_time"
                  app:layout_constraintBottom_toTopOf="@id/card_label"
                  app:layout_constraintStart_toStartOf="@id/card_label"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/card_date"
                  style="@style/HomeCard_Other"
                  android:text="@string/home_card_date"
                  app:layout_constraintBottom_toTopOf="@id/card_time"
                  app:layout_constraintStart_toStartOf="@id/card_time"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/card_location"
                  style="@style/HomeCard_Other"
                  android:text="@string/home_card_location"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="@id/card_time"
                  android:layout_marginEnd="10dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>
