<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

    <ImageView
            android:contentDescription="@string/background_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/background_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:clickable="false"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_register"
            style="@style/EditTextField_Outlined"
            android:hint="@string/name_str"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                style="@style/EditText_Input"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_register"
            style="@style/EditTextField_Outlined"
            android:layout_marginTop="12dp"
            android:hint="@string/email_str"
            app:layout_constraintTop_toBottomOf="@id/name_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                style="@style/EditText_Input"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_password_edit"
            style="@style/EditTextField_Outlined"
            android:layout_marginTop="12dp"
            android:hint="@string/password"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_visibility_24px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_register">

        <com.google.android.material.textfield.TextInputEditText
                style="@style/EditText_Input"
                android:imeOptions="actionGo"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView android:id="@+id/image_card"
               android:layout_width="120dp"
               android:layout_height="120dp"
               app:layout_constraintBottom_toTopOf="@id/name_register"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginBottom="38dp"
               android:src="@drawable/spaceman"
               android:contentDescription="@string/set_profile_picture"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/image_card"
            app:layout_constraintBottom_toBottomOf="@id/image_card"
            app:layout_constraintStart_toStartOf="@id/image_card"
            app:layout_constraintEnd_toEndOf="@id/image_card"
            android:src="@drawable/ic_camera_alt_black_24dp"
            android:tint="@android:color/darker_gray"
            tools:ignore="ContentDescription"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/location_button_profile"
            style="@style/TextButton_GreyText"
            android:text="@string/location_str"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/calendar_button_profile"
            style="@style/TextButton_RedText"
            android:text="@string/calendar_str_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView style="@style/OnboardingTitleText"
              android:text="@string/profile_pic_header"
              android:layout_marginBottom="38dp"
              app:layout_constraintBottom_toTopOf="@id/image_card"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>