<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/Section_Title_Text"
              android:text="@string/happening_str"
              android:id="@+id/whats_happening"/>


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/card_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>


    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/thisWeek_label"
              android:layout_marginTop="12dp"
              style="@style/Section_Title_Text"
              android:text="@string/this_week_str"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/today_TextView"
              style="@style/WhiteButton_RedText"
              android:text="@string/today_str"/>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="6dp"
            android:id="@+id/vert_card_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

</LinearLayout>