<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
            android:id="@+id/interest_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            style="@style/OnboardingTitleText"
            android:text="@string/interests"/>

    <TextView
            android:id="@+id/interest_sub_header"
            app:layout_constraintTop_toBottomOf="@+id/interest_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center"
            style="@style/OnboardingSubText"
            android:text="@string/what_are_you_interested_in"/>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_bar"
            style="@style/EditTextField_Outlined"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/interest_sub_header"
            android:hint="@string/search_topics"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:startIconDrawable="@drawable/ic_search_24px">
        <com.google.android.material.textfield.TextInputEditText
                style="@style/EditText_Input"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
            app:layout_constraintTop_toBottomOf="@id/search_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/temp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/to_be_replaced"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_interests_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_check"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/coral"   />
</androidx.constraintlayout.widget.ConstraintLayout>